tests/integration/errors/struct_conformance_list.rsg
// TEST: compile_error
// EXPECT-ERROR: conformance lists on struct declarations are not supported
// v0.9.6 — Conformance must use ext blocks: ext Type impl Pact { ... }

pact Printable {
    fn to_string() -> str
}

struct Foo: Printable {
    x: i32 = 0
}

fn main() {
    f := Foo {}
}
